--- a/package.json
+++ b/package.json
@@ -4,32 +4,31 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start_azure_debug": "node --inspect=0.0.0.0:$APPSVC_TUNNEL_PORT app.js" 
+    "start_azure_debug": "node --inspect=0.0.0.0:$APPSVC_TUNNEL_PORT app.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1",
     "@azure/msal-node": "^1.0.0-beta.0",
     "@microsoft/microsoft-graph-client": "^2.1.1",
     "adal-node": "^0.2.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "concurrently": "^6.1.0",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "debug": "~2.6.9",
     "express": "^4.17.1",
     "guid": "0.0.12",
+    "http-errors": "~1.6.3",
     "isomorphic-fetch": "^3.0.0",
+    "jade": "~1.11.0",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "~1.9.1",
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "powerbi-client": "^2.16.5",
     "sequelize": "^6.6.2",
     "tedious": "^11.0.8",
-    "windows-iana": "^4.2.1",
-    "nodemon": "^2.0.7"
+    "windows-iana": "^4.2.1"
   }
 }
