--- a/.github/workflows/master_erpportal.yml
+++ b/.github/workflows/master_erpportal.yml
@@ -27,11 +27,14 @@ jobs:
         npm run build --if-present
         npm run test --if-present
 
+    - name: Zip files
+      run: zip -r erp_app.zip .
+
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
         name: node-app
-        path: .
+        path: erp_app.zip
 
   deploy:
     runs-on: ubuntu-latest
