--- a/.github/workflows/master_erpportal.yml
+++ b/.github/workflows/master_erpportal.yml
@@ -49,6 +49,11 @@ jobs:
       with:
         name: node-app
 
+    - name: unZip files
+      run: |
+        unzip erp_app.zip -d app
+        cd app
+
     - name: 'Deploy to Azure Web App'
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
