--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "backend",
+  "name": "nodedemo",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "devstart": "nodemon ./server.js",
-    "start2": "node ./bin/www",
-    "start": "nodemon ./bin/www"
+    "start": "node ./server.js"
   },
   "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1",
     "@azure/msal-node": "^1.0.0-beta.0",
     "@microsoft/microsoft-graph-client": "^2.1.1",
     "adal-node": "^0.2.1",
