--- a/.github/workflows/master_erpportal.yml
+++ b/.github/workflows/master_erpportal.yml
@@ -26,11 +26,15 @@ jobs:
         npm install
         npm run build --if-present
         npm run test --if-present
+
+    - name: Zip files
+      run: zip -r erpportal.zip .
+
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
         name: node-app
-        path: .
+        path: erpportal.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,4 +56,4 @@ jobs:
         app-name: 'erpportal'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_6c89718585d644e8a61d76030957e093 }}
-        package: . 
+        package: erpportal.zip
